proj1/tests/error/badparam_endnote.tx
sdfsf sdfsd fdsfd sfd \endnote{sdfsd \indent{-3}}